@@ -1,3 +1,12 @@
+2014-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-use-idna):
+	* gnus-sum.el (gnus-summary-idna-message):
+	* message.el (message-use-idna):
+	Protect against nil value for idna-program.
+
+	* message.el (message-use-idna): Load Mule-UCS for XEmacs 21.4.
+
 2014-11-26  John Mastro  <john.b.mastro@gmail.com>  (tiny change)
 
 	* auth-source.el (auth-source-macos-keychain-search-items): Return
